common-base/xapi/xapi-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xapi-page-nginx-deployment
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: xapi-page
  replicas: 1
  template:
    metadata:
      labels:
        app: xapi-page
    spec:
      containers:
      - name: xapi-page
        image: ghcr.io/virtocommerce/demo-xapi-app:alpha.9
        command:
          - "/bin/sh"
          - "-c"
        args:
          - "rm /usr/share/nginx/html/environments/environment.variables.json
            && envsubst '$${PLATFORM_URL}'< /usr/share/nginx/html/environments/environment.variables.json.template > /usr/share/nginx/html/environments/environment.variables.json
            && nginx -g 'daemon off;'"
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 256Mi
          limits:
            memory: 256Mi
