common-base/xapi/xapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xapi-page
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: xapi-page
